Fixed spacing issue && Replaced color to hexadecimal

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,5 +17,5 @@ ul li {
 }
 
 span {
-  color:darkmagenta;
+  color:#8b008b;
 }
